<resources>
    <string name="app_name">NeWork</string>
    <string name="hello">Hello World!</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_post_like">Like</string>
    <string name="description_post_playButton">Play</string>
    <string name="description_post_share">Share</string>
    <string name="description_post_views">Views</string>
    <string name="post_text">Post Text</string>
    <string name="like">Like</string>
    <string name="chooser_share_post">Choose</string>
    <string name="error_empty_content">Error</string>
    <string name="add_post">Add</string>
    <string name="empty">empty</string>
    <string name="network_error">network_error</string>
    <string name="repead">repead_a_few_time</string>
    <string name="error_download">error_download</string>
    <string name="retry">retry</string>
    <string name="remove">remove</string>
    <string name="description_photo" >photo</string>
    <string name="description_select_photo" >select photo</string>
    <string name="description_take_photo" >take photo</string>
    <string name="back">back to posts </string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="logout"> logout</string>
    <string name="auth"> auth </string>
    <string name="register"> register </string>
    <string name="sign_In">sign In</string>
    <string name="input_you_re_pass">input you\'re password</string>
    <string name="input_you_re_login">input you\'re login</string>
    <string name="noLogin"> login not in base </string>
    <string name="back_posts">back to posts</string>
    <string name="login">login</string>
    <string name="google_play_unavailable">Google Api Unavailable</string>
    <string name="user_not_found">user not found</string>
    <string name="unknow_error">unknow error</string>

    <string name="app_text">DiplomAppTextReallyLongText</string>
    <string name="post_avatar">Post avatar</string>
    <string name="likes_button">Likes Button</string>
    <string name="share_post_button">Share Post Button</string>
    <string name="views_button">Views Button</string>
    <string name="Edit">Edit</string>
    <string name="Remove">Remove</string>
    <string name="Post_menu">Post Menu</string>
    <string name="app_header">Diplom</string>
    <string name="publish">Publish</string>
    <string name="rollback_text">Rollback Text</string>
    <string name="save">Save</string>
    <string name="video">Video</string>
    <string name="video_url">Video URL</string>
    <string name="play_video">Play video</string>
    <string name="notification_user_new_message"> %1$s message to you: %2$s</string>
    <string name="notification_user_new_post" > %1$s wrote: %2$s</string>
    <string name="empty_list">Empty list</string>
    <string name="attachment">attachment</string>
    <string name="server_error">Server Error</string>
    <string name="appears_on_http_server_errors">Appears on Http Server Errors</string>
    <string name="http_error">Http Error %1$s</string>
    <string name="error_loading">Error loading data</string>
    <string name="new_posts">New posts:</string>
    <string name="select_photo">Select Photo</string>
    <string name="take_photo">Take Photo</string>
    <string name="photo_attachment">Photo attachment</string>
    <string name="name">Name</string>
    <string name="noLoginData">Username or password is empty</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="logoutConfirm">"Logout confirm?"</string>
    <string name="cancel">"Cancel"</string>
    <string name="unknown_error">"Unknown Error"</string>
    <string name="new_notification">"New Notification"</string>
    <string name="user_already_exists">"User Already Exists"</string>
    <string name="passwords_are_not_equal">"Password and password confirmation do not match"</string>
    <string name="posts">Posts</string>
    <string name="events">Events</string>
    <string name="users">Users</string>
    <string name="registration">Registration</string>
    <string name="post">Post</string>
    <string name="likers">Likers</string>
    <string name="mentioned">Mentioned</string>
    <string name="participate">Participate</string>
    <string name="event">Event</string>
    <string name="video_container">Video container</string>
    <string name="content_can_t_be_empty">Content can\'t be empty</string>
    <string name="NeWork">NeWork\n</string>

</resources>